Bug 451117. Remove obsolete assertion. r+sr=bzbarsky